// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.filter renders custom content correctly 1`] = `
<div>
  <div class="xy-dropdown  xy-dropdown-placement-bottomRight" style="display: none;">
    <div class="xy-table-filter-dropdown xy-dropdown-content">
      <div class="custom-filter-dropdown">custom filter</div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders filter correctly 1`] = `
<div class="xy-table-wrapper">
  <div class="xy-spin-nested-loading">
    <!---->
    <div class="xy-spin-container">
      <div class="xy-table xy-table-default xy-table-scroll-position-left">
        <!---->
        <div class="xy-table-content">
          <!---->
          <div class="xy-table-body">
            <table class="">
              <colgroup>
                <col>
              </colgroup>
              <thead class="xy-table-thead">
                <tr>
                  <th class="xy-table-column-has-actions xy-table-column-has-filters xy-table-row-cell-last"><span class="xy-table-header-column"><div class=""><span class="xy-table-column-title">Name</span><span class="xy-table-column-sorter"><!----></span>
          </div></span>
          <!--teleport start-->
          <!--teleport end--><span title="Filter menu" tabindex="-1" role="img" aria-label="filter" class="anticon anticon-filter xy-dropdown-trigger"><svg class="" data-icon="filter" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896" focusable="false"><path d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"></path></svg></span></th>
          </tr>
          </thead>
          <tbody class="xy-table-tbody">
            <tr class="xy-table-row xy-table-row-level-0" data-row-key="0">
              <td class="xy-table-column-has-actions xy-table-column-has-filters">
                <!---->
                <!---->Jack
              </td>
            </tr>
            <tr class="xy-table-row xy-table-row-level-0" data-row-key="1">
              <td class="xy-table-column-has-actions xy-table-column-has-filters">
                <!---->
                <!---->Lucy
              </td>
            </tr>
            <tr class="xy-table-row xy-table-row-level-0" data-row-key="2">
              <td class="xy-table-column-has-actions xy-table-column-has-filters">
                <!---->
                <!---->Tom
              </td>
            </tr>
            <tr class="xy-table-row xy-table-row-level-0" data-row-key="3">
              <td class="xy-table-column-has-actions xy-table-column-has-filters">
                <!---->
                <!---->Jerry
              </td>
            </tr>
          </tbody>
          </table>
        </div>
        <!---->
        <!---->
        <!---->
        <!---->
      </div>
    </div>
  </div>
</div>
</div>
`;

exports[`Table.filter renders menu correctly 1`] = `
<div>
  <div class="xy-dropdown  xy-dropdown-placement-bottomRight" style="display: none;">
    <div class="xy-table-filter-dropdown xy-dropdown-content">
      <ul role="menu" tabindex="0" class="xy-dropdown-menu xy-dropdown-menu-vertical xy-dropdown-menu-root">
        <li role="menuitem" class="xy-dropdown-menu-item"><label class="xy-checkbox-wrapper"><span class="xy-checkbox"><input type="checkbox" class="xy-checkbox-input" value=""><span class="xy-checkbox-inner"></span></span></label><span>Boy</span></li>
        <li role="menuitem" class="xy-dropdown-menu-item"><label class="xy-checkbox-wrapper"><span class="xy-checkbox"><input type="checkbox" class="xy-checkbox-input" value=""><span class="xy-checkbox-inner"></span></span></label><span>Girl</span></li>
        <li role="menuitem" class="xy-dropdown-menu-submenu xy-dropdown-menu-submenu-vertical">
          <div aria-haspopup="true" title="Title" class="xy-dropdown-menu-submenu-title">Title<i class="xy-dropdown-menu-submenu-arrow"></i></div>
        </li>
      </ul>
      <div class="xy-table-filter-dropdown-btns"><a class="xy-table-filter-dropdown-link confirm">OK</a><a class="xy-table-filter-dropdown-link clear">Reset</a></div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders radio filter correctly 1`] = `
<div>
  <div class="xy-dropdown  xy-dropdown-placement-bottomRight" style="display: none;">
    <div class="xy-table-filter-dropdown xy-dropdown-content">
      <ul role="menu" tabindex="0" class="xy-dropdown-menu xy-dropdown-menu-vertical xy-dropdown-menu-root">
        <li role="menuitem" class="xy-dropdown-menu-item"><label class="xy-radio-wrapper"><span class="xy-radio"><input type="radio" class="xy-radio-input" value=""><span class="xy-radio-inner"></span></span></label><span>Boy</span></li>
        <li role="menuitem" class="xy-dropdown-menu-item"><label class="xy-radio-wrapper"><span class="xy-radio"><input type="radio" class="xy-radio-input" value=""><span class="xy-radio-inner"></span></span></label><span>Girl</span></li>
        <li role="menuitem" class="xy-dropdown-menu-submenu xy-dropdown-menu-submenu-vertical">
          <div aria-haspopup="true" title="Title" class="xy-dropdown-menu-submenu-title">Title<i class="xy-dropdown-menu-submenu-arrow"></i></div>
        </li>
      </ul>
      <div class="xy-table-filter-dropdown-btns"><a class="xy-table-filter-dropdown-link confirm">OK</a><a class="xy-table-filter-dropdown-link clear">Reset</a></div>
    </div>
  </div>
</div>
`;
